PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 6.0 Milestone 3
9 October 2015

- pts_Graph: Continued SVG optimization work
- pts-core: Fix "auto-disks" test option to not show partitions
- pts-core: Various fixes
- pts-core: Finish work on auto-authenticating clients / settings page option to automatically approve newly added systems by default
- pts-core: Add extra warning about RequiresRoot=TRUE tests
- pts-core: Detect NVMe drives when looking for block devices for disk testing
- pts-core: Add "smartmontools" as new PTS External Dependency
- pts-core: Rewrite the DragonFlyBSD external dependency handling to now use dports pkg rather than pkgsrc
- pts-core: Add NO_HTTPS environment variable option for systems that have trouble with HTTPS

Phoronix Test Suite 6.0 Milestone 2
24 September 2015

- pts-core: Just mention PHP 5.3 as the new base requirement. Code still should largely work with PHP 5.2, but don't advertise it
- pts-core: Add FileFormat optional tag to result parser with CSV support
- pts-core: Add debug-render-test for helping to optimize the graph/result rendering process
- pts-core: Rendering optimizations when handling lots of result files / graphs / result identifiers
- pts-core: Rework and optimize the pts_result_file
- pts-core: Implement new, faster result merger
- pts-core: Allow the test_run_manager to run directly with a result_file
- pts-core: Do test execution with proc_open(), allow modules to tap the process
- pts-core: Add support for emitting SVG files with g tag to save space
- pts-core: Fix breakage of pass/fail type tests in result parser
- pts-core: Drop unused PIE_CHART type
- phodevi: AMDGPU Linux detection improvements
- phoromatic: Add "Tests" page
- pts_Graph: Don't embed the PNG logo directly into the SVG file, but rely on HTTPS link
- pts_Graph: Support coloring based on brand
- pts_Graph: Implement new internal graph rendering interfaces, other major rewrites

Phoronix Test Suite 6.0 Milestone 1
26 August 2015
