@@ -1,5 +1,10 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite Git
+
+- phoromatic: Start of reworking the web interface
+- phoromatic: Initial responsive design, mobile friendly
+
 Phoronix Test Suite 6.0 Milestone 3
 9 October 2015
 
